--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "ng-rn": "^1.0.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.15.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
